Revision history for Perl module Alien::SDL

1.1
     - Powerpc fixes [ioanrogers]
     - fix for many failing MacOS CPAN tester reports [kmx]
     - updated packages (zlib-1.2.4, jpeg-8a, libpng-1.4.1, freetype-2.3.12) in src build [kmx]
     - new Win32 binaries by FROGGS (now works well on WinXP & Win7)
     - typo fixes [dorkfish]

1.0 
     - TODO for 1.0 release has been met so incrementing 

0.9.1
     - extended Windows/32bit binaries made a default option
     - additional src build set added (no preinstalled jpeg, freetype2, png required)
     - cygwin related patches [http://rt.cpan.org/Ticket/Display.html?id=55202]

0.9
     - An updated windows pack [kmx]
     - Dependencies of SHA fixed [kmx]

0.8.2 
     - Local sharedir building [kmx, FROGGS]
     - 64bit building [kthakore, kmx]
     - Darwin testing [Mike Stok, Stuart Watt, Chas Owens] and fixing [kthakore, kmx]
     - Dependencies fixes [kmx]


0.8.1
     - Quick fix for follow_skip in File::Find, and test numbers

0.8.0
     - Complete redesign by kmx, completely new interface
     - Fixed Bug on File::Find usage to get headers
0.7.8
     - Get and compile latest code for SDL, gfx, image, mixer, ttf and net

0.7.6 
     - check if make failed or passed

0.06.1 Sat Sept 14 2009
     - Fixed a stupid mistake
0.06 Fri Sept 18 2009
     - Added File::Fetch to inc
     - Added File::Spec::Unix to inc
     - Added IPC::cmd to inc
     - Added Archive::Extract to inc

0.02 Fri Aug  7 2009
    - Updated perlDoc

0.01 Thu Aug  6 2009
    - original version; created by ExtUtils::ModuleMaker 0.51