@@ -8,3 +8,4 @@ TODO list for Perl module Alien::SDL
 - give option to use old sources
 - give app to update and manage source code see below
 - use a json file which we can update off site (not hard coded) to link to new SHA sum and packs
+- build new Win/64bit binaries with SDL_Pango patch
