@@ -1,5 +1,10 @@
 Revision history for Perl module Alien::SDL
 
+NEXT
+     - more diagnostics in t/001_load.t
+     - improved patching mechanism (better CRLF/LF handling) [FROGGS]
+     - Win/32bit binaries by FROGGS (with SDL_Pango patch)
+
 1.1
      - Powerpc fixes [ioanrogers]
      - fix for many failing MacOS CPAN tester reports [kmx]
